--- a/bluesky-boot-build/bluesky-boot-parent/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-parent/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>io.github.luversof</groupId>
 		<artifactId>bluesky-boot-dependencies</artifactId>
-		<version>3.5.0</version>
+		<version>4.0.0-SNAPSHOT</version>
 		<relativePath>../bluesky-boot-dependencies</relativePath>
 	</parent>
 	<dependencies>
