--- a/bluesky-boot-build/bluesky-boot-properties-migrator/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-properties-migrator/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.github.luversof</groupId>
 		<artifactId>bluesky-boot-parent</artifactId>
-		<version>3.5.0</version>
+		<version>4.0.0-SNAPSHOT</version>
 		<relativePath>../bluesky-boot-parent</relativePath>
 	</parent>
 	<artifactId>bluesky-boot-properties-migrator</artifactId>
