--- a/bluesky-boot-build/bluesky-boot/pom.xml
+++ b/bluesky-boot-build/bluesky-boot/pom.xml
@@ -5,17 +5,13 @@
 	<parent>
 		<groupId>io.github.luversof</groupId>
 		<artifactId>bluesky-boot-parent</artifactId>
-		<version>3.5.0</version>
+		<version>4.0.0-SNAPSHOT</version>
 		<relativePath>../bluesky-boot-parent</relativePath>
 	</parent>
 	<artifactId>bluesky-boot</artifactId>
 	<dependencies>
 	
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<optional>true</optional>
-		</dependency>
+
 		
 		<dependency>
 			<groupId>com.github.f4b6a3</groupId>
@@ -28,18 +24,6 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot</artifactId>
-		</dependency>
-
-		<!-- (s) test -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<!-- (e) test -->
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -47,18 +31,13 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<!-- (s) aop -->
+		<!-- (s) jackson -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aop</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-jackson</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<!-- (e) aop -->
+		<!-- (e) jackson -->
 		
 		<!-- (s) jdbc -->
 		<dependency>
@@ -127,16 +106,16 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) jakarta -->
-
+		
 		<!-- (s) servlet web -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-webmvc</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-core</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-tomcat</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) servlet web -->
@@ -161,6 +140,23 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) spring cloud context -->
+		
+		
+		<!-- (s) spring boot starter aspectj -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aspectj</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) spring boot starter aspectj -->
+		
+		<!-- (s) spring boot starter test -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- (e) spring boot starter test -->
 		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
