--- a/bluesky-boot-build/bluesky-boot-test-autoconfigure/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-test-autoconfigure/pom.xml
@@ -15,6 +15,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jackson</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.restdocs</groupId>
@@ -26,10 +31,6 @@
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
         	<artifactId>jakarta.servlet-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
 		</dependency>
 	</dependencies>
 </project>
