--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -16,11 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
+    - name: Set up JDK 25
+      uses: actions/setup-java@v5
       with:
-        java-version: '21'
-        distribution: 'adopt'
+        java-version: '25'
+        distribution: 'microsoft'
         cache: maven
     - name: Build with Maven
       run: mvn -B package -DskipTests=true --file bluesky-boot-build/pom.xml
